fixes on alignment and cleaning of code

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,31 @@ body {
   font-family: 'Rubik', sans-serif;
   background: #fafafa;
   position: relative;
+  background: url('../images/bg1.svg') -50px 0/30vh no-repeat,
+    url('../images/bg2.svg') right bottom/30vh no-repeat;
+}
+
+.container {
+  width: 100vw;
+  height: 100%;
+  margin-top: 1em;
+  overflow: hidden;
+}
+
+a {
+  text-decoration: none;
+}
+
+.bg-2 {
+  position: absolute;
+  height: 500px;
+  bottom: 0;
+  right: -35%;
+  width: 45vh;
+  /* background: #f7f5fa; */
+  background: pink;
+  border-radius: 200px 200px 0 0;
+  z-index: -8;
 }
 
 .bg-1 {
@@ -24,33 +49,9 @@ body {
   z-index: -9;
 }
 
-.bg-2 {
-  position: absolute;
-  height: 60vh;
-  bottom: 0;
-  right: -35%;
-  width: 45vh;
-  background: #f7f5fa;
-  border-radius: 200px 200px 0 0;
-  z-index: -8;
-}
-
-.container {
-  z-index: 99;
-  /* margin: 2em auto; */
-  /* border: 1px solid magenta; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-a {
-  text-decoration: none;
-}
-
 /* Phone design */
 .phone {
-  margin-top: 2em;
+  margin: 0 auto;
   width: 15.437rem;
   height: 31.625rem;
   /* border: 1px solid magenta; */
@@ -291,6 +292,7 @@ a {
 .description {
   text-align: center;
   padding: 0 2.062em;
+  margin-bottom: 20px;
 }
 
 .description h1 {
@@ -304,4 +306,41 @@ a {
   font-size: 0.725rem;
   line-height: 1.4em;
   letter-spacing: 0.1em;
+}
+
+@media screen and (min-height: 700px) {
+  .container {
+    height: 100vh;
+  }
+}
+
+@media screen and (min-width: 1439px) {
+  body {
+    overflow: hidden;
+    background: url('../images/bg1.svg') -50px 0/45vh no-repeat,
+      url('../images/bg2.svg') right bottom/45vh no-repeat;
+  }
+  .container {
+    /* margin-top: 20vh; */
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  .phone {
+    box-shadow: 0 2px 10px 0.2px rgb(226, 226, 226);
+    margin: 0 4em;
+  }
+
+  .description {
+    /* border: 1px solid magenta; */
+    width: 30%;
+    text-align: left;
+  }
+
+  .description p {
+    line-height: 20px;
+  }
 }
